правка путей изображений

--- a/builds/index.html
+++ b/builds/index.html
@@ -37,7 +37,7 @@
       input(type="radio" name="slider-switch")
       -->
       <div class="main-slider__inner-container">
-        <div class="main-slider__slide">
+        <div style="background: #a48e80 url(./img/slide-1bg.jpg);" class="main-slider__slide">
           <div class="main-slider__slide-heading">Дилер</div>
           <div class="main-slider__slide-descript">Новые коллекции Kerama Marazzi</div>
           <div class="main-slider__links-container"><a href="#" title="#" class="main-slider__option main-slider__option--view-link">Посмотреть</a><a href="#" title="#" class="main-slider__option main-slider__option--full-catalog-link">Весь каталог</a></div>
