Исправление href ссылок меню

--- a/builds/index.html
+++ b/builds/index.html
@@ -13,7 +13,7 @@
     <title>Мосплитка</title>
   </head>
   <body><a href="#top" class="scroll-top-btn"></a><a name="top"></a>
-    <header class="main-header"><a href="/" title="#" class="main-logo"><img src="./img/header-logo.png" width="182" height="22" alt="Лого. Ссылка на главную страницу"></a>
+    <header class="main-header"><a href="#" title="#" class="main-logo"><img src="./img/header-logo.png" width="182" height="22" alt="Лого. Ссылка на главную страницу"></a>
       <nav> 
         <ul class="main-nav">
           <li><a href="catalog.html" title="#">Каталог</a></li>
@@ -191,7 +191,7 @@
           <div>Посмотреть каталог</div>
         </div></a></nav>
     <footer class="main-footer">
-      <section class="main-footer__info-container"><a href="/" title="#" class="main-footer__logo"><img src="img/footer-logo.png" width="372" height="45" alt="Лого. Переход на главную страницу"></a>
+      <section class="main-footer__info-container"><a href="#" title="#" class="main-footer__logo"><img src="img/footer-logo.png" width="372" height="45" alt="Лого. Переход на главную страницу"></a>
         <div class="main-footer__info-content">
           <div class="main-footer__info-item main-footer__info-item--schedule">
             <div class="main-footer__info-heading">Время работы</div>
@@ -208,7 +208,7 @@
         <div class="main-footer__nav-inn-container">
           <div class="main-footer__copyright">	&copy; Copyright 2017</div>
           <ul class="main-footer__nav">
-            <li><a href="/" title="#">О компании</a></li>
+            <li><a href="#" title="#">О компании</a></li>
             <li><a href="contacts.html" title="#">Адрес</a></li>
             <li><a href="contacts.html" title="#">Контакты</a></li>
             <li><a href="#" title="#">Политика конфиденциальности</a></li>
