--- a/builds/orders.html
+++ b/builds/orders.html
@@ -13,7 +13,7 @@
     <title>Мосплитка</title>
   </head>
   <body><a href="#top" class="scroll-top-btn"></a><a name="top"></a>
-    <header class="main-header"><a href="/" title="#" class="main-logo"><img src="./img/header-logo.png" width="182" height="22" alt="Лого. Ссылка на главную страницу"></a>
+    <header class="main-header"><a href="index.html" title="#" class="main-logo"><img src="./img/header-logo.png" width="182" height="22" alt="Лого. Ссылка на главную страницу"></a>
       <nav>
         <ul class="main-nav">
           <li><a href="catalog.html" title="#">Каталог</a></li>
@@ -24,7 +24,7 @@
           <li><a href="contacts.html" title="#">Контакты</a></li>
         </ul>
       </nav><a href="tel:+78002501080" title="#" class="main-header__call-us">8 800 250 10 80</a>
-      <div class="main-header__custom-actions main-header__custom-actions--login-session"><a href="#" title="#" class="main-header__search"></a><a href="#" title="#" class="main-header__login">Выход</a><a href="#" title="#" class="main-header__my-basket">2</a></div>
+      <div class="main-header__custom-actions main-header__custom-actions--login-session"><a href="#" title="#" class="main-header__search"></a><a href="index.html" title="#" class="main-header__login">Выход</a><a href="#" title="#" class="main-header__my-basket">2</a></div>
     </header>
     <div style="background: #b09e8a url(img/catalog-h-bg.jpg)" class="page-heading">
       <div class="page-heading__text">ООО "Промлес"</div>
@@ -990,7 +990,7 @@
       </div>
     </div>
     <footer class="main-footer">
-      <section class="main-footer__info-container"><a href="/" title="#" class="main-footer__logo"><img src="img/footer-logo.png" width="372" height="45" alt="Лого. Переход на главную страницу"></a>
+      <section class="main-footer__info-container"><a href="index.html" title="#" class="main-footer__logo"><img src="img/footer-logo.png" width="372" height="45" alt="Лого. Переход на главную страницу"></a>
         <div class="main-footer__info-content">
           <div class="main-footer__info-item main-footer__info-item--schedule">
             <div class="main-footer__info-heading">Время работы</div>
@@ -1007,7 +1007,7 @@
         <div class="main-footer__nav-inn-container">
           <div class="main-footer__copyright">	&copy; Copyright 2017</div>
           <ul class="main-footer__nav">
-            <li><a href="/" title="#">О компании</a></li>
+            <li><a href="index.html" title="#">О компании</a></li>
             <li><a href="contacts.html" title="#">Адрес</a></li>
             <li><a href="contacts.html" title="#">Контакты</a></li>
             <li><a href="#" title="#">Политика конфиденциальности</a></li>
