--- a/builds/catalog.html
+++ b/builds/catalog.html
@@ -10,11 +10,11 @@
     <link href="https://fonts.googleapis.com/css?family=Roboto:300&amp;amp;subset=cyrillic" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Roboto:400i&amp;amp;subset=cyrillic" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Roboto:500&amp;amp;subset=cyrillic" rel="stylesheet">
-    <script type="text/javascript" src="http://code.jquery.com/jquery-3.2.1.min.js"></script>
+    <script type="text/javascript" src="https://code.jquery.com/jquery-3.2.1.min.js"></script>
     <title>Мосплитка</title>
   </head>
   <body><a href="#top" class="scroll-top-btn"></a><a name="top"></a>
-    <header class="main-header"><a href="/" title="#" class="main-logo"><img src="./img/header-logo.png" width="182" height="22" alt="Лого. Ссылка на главную страницу"></a>
+    <header class="main-header"><a href="index.html" title="#" class="main-logo"><img src="./img/header-logo.png" width="182" height="22" alt="Лого. Ссылка на главную страницу"></a>
       <nav>
         <ul class="main-nav">
           <li class="main-nav__active-link"><a href="#" title="#">Каталог</a></li>
@@ -25,7 +25,7 @@
           <li><a href="contacts.html" title="#">Контакты</a></li>
         </ul>
       </nav><a href="tel:+78002501080" title="#" class="main-header__call-us">8 800 250 10 80</a>
-      <div class="main-header__custom-actions"><a href="#" title="#" class="main-header__search"></a><a href="#" title="#" class="main-header__login">Вход</a><a href="#" title="#" class="main-header__my-basket">0</a></div>
+      <div class="main-header__custom-actions"><a href="#" title="#" class="main-header__search"></a><a href="orders.html" title="#" class="main-header__login">Вход</a><a href="#" title="#" class="main-header__my-basket">0</a></div>
     </header>
     <div style="background: #b09e8a url(img/catalog-h-bg.jpg)" class="page-heading">
       <div class="page-heading__text">ООО "Промлес"</div>
@@ -680,7 +680,7 @@
       </div>
     </div>
     <footer class="main-footer">
-      <section class="main-footer__info-container"><a href="/" title="#" class="main-footer__logo"><img src="img/footer-logo.png" width="372" height="45" alt="Лого. Переход на главную страницу"></a>
+      <section class="main-footer__info-container"><a href="index.html" title="#" class="main-footer__logo"><img src="img/footer-logo.png" width="372" height="45" alt="Лого. Переход на главную страницу"></a>
         <div class="main-footer__info-content">
           <div class="main-footer__info-item main-footer__info-item--schedule">
             <div class="main-footer__info-heading">Время работы</div>
@@ -697,7 +697,7 @@
         <div class="main-footer__nav-inn-container">
           <div class="main-footer__copyright">	&copy; Copyright 2017</div>
           <ul class="main-footer__nav">
-            <li><a href="/" title="#">О компании</a></li>
+            <li><a href="index.html" title="#">О компании</a></li>
             <li><a href="contacts.html" title="#">Адрес</a></li>
             <li><a href="contacts.html" title="#">Контакты</a></li>
             <li><a href="#" title="#">Политика конфиденциальности</a></li>
